trunk/Archive/03b5602b38a487a3ba122785e33848e8-1f48a68887043b2645051583fb11641d/output
main.cpp: In function 'int main()':
main.cpp:7:18: error: no matching function for call to 'myfunc(main()::__lambda0)'
     myfunc([](){});
                  ^
main.cpp:7:18: note: candidate is:
main.cpp:4:6: note: template<class R, class ... P> void myfunc(const std::function<_Res(_ArgTypes ...)>&)
 void myfunc(std::function<R(P...)> const &func) {}
      ^
main.cpp:4:6: note:   template argument deduction/substitution failed:
main.cpp:7:18: note:   'main()::__lambda0' is not derived from 'const std::function<_Res(_ArgTypes ...)>'
     myfunc([](){});
                  ^
